--- a/IMS_client/Settings_window.xaml
+++ b/IMS_client/Settings_window.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="IMS_client.Settings_window"
+﻿<Window x:Class="IMS_client.SettingsWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:IMS_client"
