--- a/IMS_client/Style_Window.xaml
+++ b/IMS_client/Style_Window.xaml
@@ -1,5 +1,5 @@
 ﻿<ResourceDictionary
-  x:Class="IMS_client.Style_Window"
+  x:Class="IMS_client.StyleWindow"
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"  
    xmlns:local="clr-namespace:IMS_client"
